Fix item list stretch

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,12 +2,7 @@
         opacity: .20;
 }
 
-.item {
-        width: 50px;
-        height: 50px;
-        outline: 2px solid white;
-        outline-offset: -2px;
-}
+.item {}
 
 .lock-item {
         outline: 2px solid red;
